syntax = "proto3";

option csharp_namespace = "fed.cloud.product.host.Protos";

package product;

service Product {
	rpc QueryProduct(RequestProducts) returns (ResultResponse);
	rpc GetProduct (RequestProduct) returns (ProductData);
}

message RequestProducts {
	string query = 1;
}

message ResultResponse {
	repeated ProductSummary items = 1;
}

message ProductSummary {
	int64 number = 1;
	string brand = 2;
	string name = 3;
}

message RequestProduct {
	int64 number = 1;
}

message ProductData {
	string brand = 1;
	string name = 2;
	double qty = 3;
	int64 number = 4;
	Unit unit = 5;
	Category category = 6;
	repeated SellerPrice prices = 7;
}

message SellerPrice {
	double price = 2;
	int32 currency = 3;
}

message Unit {
	int32 id = 1;
	string name = 2;
	double rate = 3;
}

message Category {
	int32 id = 1;
	string name = 2;
	Category parent = 3;
}